sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: value t
  while (ecart>1 || t==true  ) {
                    ^AlgCombSort:7: error: not found: value t
    t=true
    ^AlgCombSort:15: error: not found: value t
        t=false
        ^