sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs();
  var i=0;
  var test=true
  while (ecart>1 || t==true  ) {
    t=true
    if (ecart>1) {
    	ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
  	}
  	i=0
  	while (i+ecart < getNombreValeurs()) {
      if (!plusPetit(i:Int, i+ecart:Int)) {
      	echange(i:Int, i+ecart:Int)
        t=false
    	}
    	i=i+1;
  	}
  }

  
  
}